plugins {
    id 'com.android.application'
}

android {
    namespace 'de.nazmi.minisnake'
    compileSdk 34

    defaultConfig {
        applicationId "de.nazmi.minisnake"
        minSdk 24
        targetSdk 34
        versionCode 3
        versionName "1.2"
    }
    signingConfigs {
        release {
            storeFile = file("keystore/android_keystore.jks")
            storePassword System.getenv("SIGNING_STORE_PASSWORD")
            keyAlias System.getenv("SIGNING_KEY_ALIAS")
            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
        }
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

            applicationVariants.all { variant ->
                variant.outputs.all {
                    outputFileName = "${rootProject.name}_${versionName}.apk"
                }
            }
            signingConfig signingConfigs.release
            bundle {
                enabled true
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    packagingOptions {
        exclude 'META-INF/LICENSE'
    }
}

